fixed word wrap issue in chat...

--- a/Ohako/stylesheets/viewHomeVenue.css
+++ b/Ohako/stylesheets/viewHomeVenue.css
@@ -98,6 +98,7 @@
 	border-radius:8px;
 	margin:2px;
 	padding:4px;
+	word-wrap:break-word;
 }
 
 .chatMessageDetails{
